--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+	<head>
+		<title>Home</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<script src="js/require.js" data-main="js/script.js"></script>
+		<script src="js/jquery.js"></script>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<div id="start">
+			<button onclick="start()">Start Game</button>
+		</div>
+		<div id="game">
+			<div id="stats">
+				<div>
+					<span id="health"></span>
+					<span id="mana"></span>
+					<span id="gold"></span>
+				</div>
+				<br />
+				<div id="minions"></div>
+			</div>
+			<br />
+			<div id="actions">
+				<button onclick="necromancer.modMana(1)">Gain 1 Mana</button>
+				<button onclick="summonSkeletalLaborer.cast()">
+					Summon Skeletal Laborer
+				</button>
+				<button onclick="summonSkeletalWarrior.cast()">
+					Summon Skeletal Warrior
+				</button>
+			</div>
+			<br />
+			<div id="enemyStats">
+				<span id="enemyName"></span><span id="enemyHealth"></span>
+			</div>
+		</div>
+	</body>
 </html>
