--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
       referrerpolicy="no-referrer"
     ></script>
     <script type="module" src="js/main.js"></script>
-    <script>
-      import start from 'js/main.js';
-    </script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="start">
-      <button onclick="start()">Start Game</button>
+      <button id="gameStart">Start Game</button>
     </div>
     <div id="game">
       <div id="stats">
