--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
       </div>
       <br />
       <div id="actions">
-        <button onclick="necromancer.modMana(1)">Gain 1 Mana</button>
-        <button onclick="necromancer.castSpell('summonSkeletalLaborer')">
-          Summon Skeletal Laborer
-        </button>
-        <button onclick="necromancer.castSpell('summonSkeletalWarrior')">
-          Summon Skeletal Warrior
-        </button>
+        <button id="manaStone">Gain 1 Mana</button>
+        <div id="spells"></div>
       </div>
       <br />
       <div id="enemyStats">
