--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
       </div>
       <div id="playerActions">
-        <button id="manaStone">Gain 1 Mana</button>
+        <div id="manaStoneContainer">
+          <button id="manaStone">Gain 1 Mana</button>
+        </div>
         <div id="playerSpells"></div>
       </div>
     </div>
