8 files modified, 3 added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <div id="battlefield">
         <div id="playerMinions"></div>
         <div id="enemyStats">
-          <span id="enemyName"></span>
-          <span id="enemyHealth"></span>
+          <div id="enemyName"></div>
+          <div id="enemyHealth"></div>
+          <div id="enemyDPS"></div>
         </div>
       </div>
       <div id="playerActions">
